--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "archiver": "^5.3.1",
     "arraybuffer-to-buffer": "0.0.7",
@@ -34,5 +30,8 @@
     "sharp": "^0.31.3",
     "tmp": "^0.2.1",
     "tmp-promise": "^3.0.3"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
